# IkomiaApi

./: .gitignore  IkomiaApi.pri  IkomiaApi.pro  LocalSettingsTemplate.pri  MANIFEST.in  README.md  build-linux.sh  macros.pri  pyproject.toml  requirements.txt  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
Core/: Core.pro
Core/Data/: CDataArrayInfo.cpp  CDataArrayInfo.h  CDataConversion.cpp  CDataConversion.h  CDataDicomInfo.cpp  CDataDicomInfo.h  CDataImageInfo.cpp  CDataImageInfo.h  CDataInfo.cpp  CDataInfo.h  CDataSubset.hpp  CDataVideoInfo.cpp  CDataVideoInfo.h  CDataset.hpp  CDatasetInfo.cpp  CDatasetInfo.h  CMat.hpp  CMeasure.cpp  CMeasure.h  CndArray.hpp  CvMatNumpyArrayConverter.cpp  CvMatNumpyArrayConverter.h
Core/Graphics/: CGraphicsComplexPolygon.cpp  CGraphicsComplexPolygon.h  CGraphicsContext.cpp  CGraphicsContext.h  CGraphicsConversion.cpp  CGraphicsConversion.h  CGraphicsEllipse.cpp  CGraphicsEllipse.h  CGraphicsItem.hpp  CGraphicsJSON.cpp  CGraphicsJSON.h  CGraphicsLayer.cpp  CGraphicsLayer.h  CGraphicsPoint.cpp  CGraphicsPoint.h  CGraphicsPolygon.cpp  CGraphicsPolygon.h  CGraphicsPolyline.cpp  CGraphicsPolyline.h  (+6 more)
DataIO/: CDataIO.hpp  CDataImageIO.cpp  CDataImageIO.h  CDataVideoBuffer.cpp  CDataVideoBuffer.h  CDataVideoIO.cpp  CDataVideoIO.h  CDicomImageIO.cpp  CDicomImageIO.h  CNumpyImageIO.cpp  CNumpyImageIO.h  COpencvImageIO.cpp  COpencvImageIO.h  COpencvVideoIO.cpp  COpencvVideoIO.h  CVirtualImageIO.cpp  CVirtualImageIO.h  CVirtualVideoIO.cpp  CVirtualVideoIO.h  DataIO.pro  DataIOGlobal.hpp  DataIOTools.hpp
DataManagement/: CDataManager.hpp  CImageDataManager.cpp  CImageDataManager.h  CVideoDataManager.cpp  CVideoDataManager.h  DataManagement.pro  DataManagementGlobal.hpp
DataPlot/: CCurvePlot.cpp  CCurvePlot.h  CDataPlot.cpp  CDataPlot.h  CHistogramPlot.cpp  CHistogramPlot.h  CMultiBarPlot.cpp  CMultiBarPlot.h  CPieMarker.cpp  CPieMarker.h  CPiePlot.cpp  CPiePlot.h  CPlot.cpp  CPlot.h  CSimpleBarPlot.cpp  CSimpleBarPlot.h  DataPlot.pro  DataPlotGlobal.h
DataProcess/: CPluginProcessInterface.hpp  CProcessRegistration.cpp  CProcessRegistration.h  DataProcess.hpp  DataProcess.pro  DataProcessGlobal.hpp  DataProcessTools.hpp  pch.hpp
PyCore/: CGraphicsItemWrap.cpp  CGraphicsItemWrap.h  CProtocolTaskIOWrap.cpp  CProtocolTaskIOWrap.h  CProtocolTaskParamWrap.cpp  CProtocolTaskParamWrap.h  CProtocolTaskWidgetWrap.cpp  CProtocolTaskWidgetWrap.h  CProtocolTaskWrap.cpp  CProtocolTaskWrap.h  PyCore.cpp  PyCore.h  PyCore.pro  PyCoreDocString.hpp  PyCoreGlobal.h  PyCoreTools.hpp
PyDataIO/: PyDataIO.cpp  PyDataIO.h  PyDataIO.pro  PyDataIOGlobal.hpp
PyDataProcess/: CArrayIOWrap.cpp  CDatasetIOWrap.cpp  CDatasetIOWrap.h  CDnnTrainProcessParamWrap.cpp  CDnnTrainProcessParamWrap.h  CDnnTrainProcessWrap.cpp  CDnnTrainProcessWrap.h  CFeatureProcessIOWrap.hpp  CGraphicsInputWrap.cpp  CGraphicsInputWrap.h  CImageProcess2dWrap.cpp  CImageProcess2dWrap.h  CImageProcessIOWrap.cpp  CImageProcessIOWrap.h  CInteractiveImageProcess2dWrap.cpp  CInteractiveImageProcess2dWrap.h  CPathIOWrap.cpp  CPluginProcessInterfaceWrap.cpp  CPluginProcessInterfaceWrap.h  CProcessFactoryWrap.cpp  CProcessFactoryWrap.h  CVideoProcessIOWrap.cpp  CVideoProcessIOWrap.h  CVideoProcessOFWrap.cpp  CVideoProcessOFWrap.h  CVideoProcessTrackingWrap.cpp  CVideoProcessTrackingWrap.h  CVideoProcessWrap.cpp  CVideoProcessWrap.h  CWidgetFactoryWrap.cpp  CWidgetFactoryWrap.h  CWidgetOutputWrap.cpp  CWidgetOutputWrap.h  PyDataProcess.cpp  PyDataProcess.h  PyDataProcess.pro  PyDataProcessDocString.hpp  PyDataProcessGlobal.h  PyDataProcessTools.hpp
PyUtils/: PyUtils.cpp  PyUtils.h  PyUtils.pro  PyUtilsDocString.hpp  PyUtilsGlobal.h
Utils/: CException.cpp  CException.h  CLogManager.cpp  CLogManager.h  CMemoryInfo.cpp  CMemoryInfo.h  CProgressSignalHandler.cpp  CProgressSignalHandler.h  CTimer.hpp  CTreeDbManager.hpp  CWindowsDeviceEnumerator.cpp  CWindowsDeviceEnumerator.h  ExceptionCode.hpp  Markup.cpp  Markup.h  PythonThread.hpp  UnitTestUtils.hpp  Utils.pro  UtilsDefine.hpp  UtilsGlobal.hpp  UtilsTools.hpp  qaesencryption.h
VolumeRender/: CAxisRender.cpp  CAxisRender.h  CCylinderRender.cpp  CCylinderRender.h  CSphereRender.cpp  CSphereRender.h  CTextureRender.cpp  CTextureRender.h  VolumeRender.cpp  VolumeRender.h  VolumeRender.pro  VolumeRenderDefine.h  VolumeRenderGlobal.h  ocl.hpp  renderUtils.hpp
cpp/: IkomiaApi.pri  IkomiaPluginsCpp.pri  LocalSettingsTemplate.pri  macros.pri
doc/: gen_stubs.py  make_html.sh  make_stubs.bat  make_stubs.sh  requirements.txt
ikomia/: .env-example  __init__.py
scripts/: start_train_monitoring.py
tests/: api-tests.ipynb  test-auth.py  test-core.py  test-dataio.py  test-dataprocess.py  test-display.py  test-dnn.py  test-graphics.py  test-hub.py  test-install.py  test-registry.py  test-task-io.py  test-task-param.py  test-task.py  test-utils.py  test-workflow.py  test_auth.py  test_config.py  test_core.py  test_dataio.py  test_dataprocess.py  test_display.py  test_dnn.py  test_graphics.py  test_install.py  test_registry.py  test_task.py  test_task_io.py  test_task_param.py  test_textstream_io.py  test_utils.py  test_workflow.py
(+1469 files in other folders)
