[build-system]
requires = ["setuptools>=73.0", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ikomia"
dynamic = ["version"]
description = "Ikomia Python API for Computer Vision workflow and plugin integration in Ikomia Studio"
readme = "README.md"
requires-python = ">=3.8"
license = "Apache-2.0"
license-files = ["LICENSE.md"]
authors = [
    { name = "Ikomia", email = "contact@ikomia.ai" }
]
keywords = [
    "computer vision",
    "deep learning",
    "workflow",
]
dependencies = [
    "cython",
    "numpy >= 2.0, < 3.0",
    "requests >= 2.28.0, < 3.0",
    "mlflow >= 2.17.2, < 3.0",
    "tensorboard >= 2.5.0, < 3.0",
    "Pillow >= 8.1.0",
    "tqdm >= 4.41.0, < 5.0",
    "matplotlib >= 3.4.3, < 4.0",
    "python-dotenv >= 0.18.0",
    "pyyaml",
    "semver >= 3.0.1, < 4.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "coverage",
    "pytest-cov",
    "pylint",
    "flake8",
]

[project.urls]
Homepage = "https://github.com/Ikomia-dev/IkomiaApi"

[tool.setuptools_scm]
version_file = "ikomia/_version.py"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["ikomia*"]

[tool.setuptools.package-data]
ikomia = ["*.so", "lib/**/*", "opencv/**/*.so"]
"ikomia.core" = ["*.so", "*.yaml"]
"ikomia.dataio" = ["*.so"]
"ikomia.dataprocess" = ["*.so"]
"ikomia.utils" = ["*.so"]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.pylint.format]
max-line-length = 120

[flake8]
max-line-length = 120
