[metadata]
name = ikomia
version = 0.6.0
author = Ikomia SAS
author_email = contact@ikomia.com
description = Ikomia Python API for Computer Vision workflow and plugin integration in Ikomia Studio
url = https://github.com/Ikomia-dev/IkomiaApi
license = LGPLv3
license_files = LICENSE.md
keywords =
    computer vision
    deep learning
    workflow

[options]
include_package_data = True

packages =
    ikomia
    ikomia.core
    ikomia.dataio
    ikomia.dataprocess
    ikomia.dnn
    ikomia.dnn.torch
    ikomia.utils

package_dir =
    ikomia = ikomia
    ikomia.core = ikomia/core
    ikomia.dataio = ikomia/dataio
    ikomia.dataprocess = ikomia/dataprocess
    ikomia.dnn = ikomia/dnn
    ikomia.dnn.torch = ikomia/dnn/torch
    ikomia.utils = ikomia/utils

python_requires = >=3.7

install_requires =
    PyQt5 == 5.15.2
    numpy == 1.19.0
    requests
    mlflow == 1.14.1
    tensorboard >= 2.4.1
    Pillow == 8.1.0
    tqdm >= 4.41.0

[options.packages.find]
where = ikomia
