[metadata]
name = ikomia
version = attr:version.__version__
author = Ikomia SAS
author_email = contact@ikomia.com
description = Ikomia Python API for Computer Vision workflow and plugin integration in Ikomia Studio
url = https://github.com/Ikomia-dev/IkomiaApi
license = Apache 2.0
license_files = LICENSE.md
keywords =
    computer vision
    deep learning
    workflow

[options]
include_package_data = True

packages =
    ikomia
    ikomia.core
    ikomia.dataio
    ikomia.dataprocess
    ikomia.dnn
    ikomia.dnn.torch
    ikomia.utils

package_dir =
    ikomia = ikomia
    ikomia.core = ikomia/core
    ikomia.dataio = ikomia/dataio
    ikomia.dataprocess = ikomia/dataprocess
    ikomia.dnn = ikomia/dnn
    ikomia.dnn.torch = ikomia/dnn/torch
    ikomia.utils = ikomia/utils

python_requires = >=3.7

install_requires =
    cython
    setuptools == 59.5.0
    numpy >= 1.20.3
    requests
    mlflow == 1.24.0
    tensorboard >= 2.5.0
    Pillow >= 8.1.0
    tqdm >= 4.41.0
    matplotlib == 3.4.3
    python-dotenv >= 0.18.0
    pycocotools >= 2.0.4
    pyyaml

[options.packages.find]
where = ikomia
