[metadata]
name = ikomia
version = attr:version.__version__
author = Ikomia SAS
author_email = contact@ikomia.com
description = Ikomia Python API for Computer Vision workflow and plugin integration in Ikomia Studio
url = https://github.com/Ikomia-dev/IkomiaApi
license = Apache 2.0
license_files = LICENSE.md
keywords =
    computer vision
    deep learning
    workflow

[options]
include_package_data = True

packages =
    ikomia
    ikomia.core
    ikomia.dataio
    ikomia.dataprocess
    ikomia.dnn
    ikomia.dnn.torch
    ikomia.utils

package_dir =
    ikomia = ikomia
    ikomia.core = ikomia/core
    ikomia.dataio = ikomia/dataio
    ikomia.dataprocess = ikomia/dataprocess
    ikomia.dnn = ikomia/dnn
    ikomia.dnn.torch = ikomia/dnn/torch
    ikomia.utils = ikomia/utils

python_requires = >=3.8

install_requires =
    cython
    setuptools == 73.0.1
    numpy >= 1.24.4, < 2.0
    requests >= 2.28.0, < 3.0
    mlflow >= 2.17.2, < 3.0
    tensorboard >= 2.5.0, < 3.0
    Pillow >= 8.1.0
    tqdm >= 4.41.0, < 5.0
    matplotlib >= 3.4.3, <4.0
    python-dotenv >= 0.18.0
    pyyaml
    semver >= 3.0.1, <4.0

[options.packages.find]
where = ikomia

[flake8]
max-line-length = 120

[pylint.FORMAT]
max-line-length = 123
